--- a/assets/css/templates.css
+++ b/assets/css/templates.css
@@ -88,7 +88,8 @@ color: rgb(7, 114, 149);
 
 
 
-      /*Contact info*/
+ 
+    /*Contact info*/
 #contact1 {
   background-color: rgba(0, 19, 53);
   color: white;
@@ -113,7 +114,7 @@ color: rgb(7, 114, 149);
     margin-right: 15px;
 }
 
-#contact .social-links i {
+.social-links i {
 
     color: rgb(160, 106, 218);
     font-size: 1.9rem;
@@ -121,8 +122,7 @@ color: rgb(7, 114, 149);
     -o-transition: color 0.3s ease-in-out;
     transition: color 0.3s ease-in-out;
 }
-
-#contact .social-links i:hover {
+ .social-links i:hover {
     color: rgb(56, 18, 96);
 
 }
